--- a/questions_app/templates/users.html
+++ b/questions_app/templates/users.html
@@ -12,9 +12,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="list-group">
-            {% for users in users %}
-            <a href="#" class="list-group-item active">
-              <h4 class="list-group-item-heading">{{ users.name }}</h4>
+            {% for user in users %}
+            <a href="{{url_for('promote', user_id=user['id']) }}" class="list-group-item {% if user['expert'] == 1 %} active {% endif%}">
+              <h4 class="list-group-item-heading">{{ user.name }}</h4>
             </a>
             {% endfor %}
           </div>
