--- a/questions_app/templates/base.html
+++ b/questions_app/templates/base.html
@@ -12,35 +12,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Questions & Answers</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse col-lg-12 col-md-6">
-        <ul class="nav navbar-nav">
-          <li class=""><a href="{{url_for('index') }}">Home</a></li>
-          {% if not user %}
-            <li><a href="{{ url_for('login') }}">Login</a></li>
-            <li><a href="{{ url_for('register') }}">Register</a></li>
-          {% endif %}
-          {% if user %}
-            <li><a href="{{ url_for('ask') }}">Ask Question</a></li>
-          {% endif %}
-          {% if user %}
-            <li><a href="{{ url_for('answers') }}">Answer Questions</a></li>
-          {% endif %}
-         <!--['expert'] == 1-->
-          {% if user %}
-            <li><a href="{{ url_for('users') }}">User Setup</a></li>
-          {% endif %}
-          {% if user %}
-            <li><a href="{{ url_for('logout') }}">Logout</a></li>
-          {% endif %}
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Questions & Answers</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
+              {% if not user %}
+              <li><a href="{{ url_for('login') }}">Login</a></li>
+              <li><a href="{{ url_for('register') }}">Register</a></li>
+              {% endif %}
+              {% if user and user['admin'] == 0 and user['expert'] == 0 %}
+              <li><a href="{{ url_for('ask') }}">Ask Question</a></li>
+              {% endif %}
+              {% if user and user['expert'] == 1 %}
+              <li><a href="{{ url_for('answer') }}">Answer Questions</a></li>
+              {% endif %}
+              {% if user and user['admin'] == 1 %}
+              <li><a href="{{ url_for('users') }}">User Setup</a></li>
+              {% endif %}
+              {% if user %}
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+              {% endif %}
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
 {% block body %}{% endblock %}
 </body>
 </html>
