--- a/questions_app/templates/base.html
+++ b/questions_app/templates/base.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{% block title %}{% endblock %}</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <title>Answer Question</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='bootstrap-theme.css') }}" rel="stylesheet">
-    <!-- Custom styles for this template -->
+    
     <link href="{{ url_for('static', filename='theme.css') }}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+  </head>
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -24,11 +27,11 @@
               <li><a href="{{ url_for('login') }}">Login</a></li>
               <li><a href="{{ url_for('register') }}">Register</a></li>
               {% endif %}
-              {% if user and user['admin'] == 0 and user['expert'] == 0 %}
+              {% if user and user['expert'] == 0 %}
               <li><a href="{{ url_for('ask') }}">Ask Question</a></li>
               {% endif %}
               {% if user and user['expert'] == 1 %}
-              <li><a href="{{ url_for('answer') }}">Answer Questions</a></li>
+              <li><a href="{{ url_for('unanswered') }}">Answer Questions</a></li>
               {% endif %}
               {% if user and user['admin'] == 1 %}
               <li><a href="{{ url_for('users') }}">User Setup</a></li>
@@ -40,6 +43,7 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
+      
 {% block body %}{% endblock %}
 </body>
 </html>
