--- a/questions_app/templates/answer.html
+++ b/questions_app/templates/answer.html
@@ -33,7 +33,7 @@
             <li><a href="{{ url_for('ask') }}">Ask Question</a></li>
             {% endif %}
             {% if user and user['expert'] == 1 %}
-            <li><a href="{{ url_for('answer') }}">Answer Questions</a></li>
+            <li><a href="{{ url_for('answer', question_id=question['id'])}}">Answer Questions</a></li>
             {% endif %}
             {% if user and user['admin'] == 1 %}
             <li><a href="{{ url_for('users') }}">User Setup</a></li>
